--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "name": "Corey Wysong"
   },
   "dependencies": {
-    "promiscuous": "^0.6.0",
-    "ws": "^0.6.4"
+    "promiscuous": "^0.6.0"
   },
   "description": "A simple, intuitive, and powerful JavaScript signaling library",
   "devDependencies": {
