--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   "engines": {
     "node": ">=0.8"
   },
+  "keywords": [
+    "sip",
+    "udp",
+    "node",
+    "library"
+  ],
   "license": "MIT",
   "main": "src/index.js",
   "name": "sipjs-udp",
@@ -36,5 +42,5 @@
     "test": "grunt travis --verbose"
   },
   "title": "sipjs-udp",
-  "version": "0.0.7"
+  "version": "0.0.8"
 }
