Using "prepublishOnly" instead of deprecated "prepublish" in package.json

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "main": "src/index.js",
   "name": "sipjs-udp",
   "scripts": {
-    "prepublish": "cd src/Grammar && mkdir -p dist && pegjs --extra-options-file peg.json src/Grammar.pegjs dist/Grammar.js",
+    "prepublishOnly": "cd src/Grammar && mkdir -p dist && pegjs --extra-options-file peg.json src/Grammar.pegjs dist/Grammar.js",
     "test": "grunt travis --verbose"
   },
   "title": "sipjs-udp",
