--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "sipjs-udp",
+  "title": "sipjs-udp",
+  "description": "A simple, intuitive, and powerful JavaScript SIP library that leverages UDP.",
+  "keywords": [
+    "sip",
+    "udp"
+  ],
+  "version": "0.0.18",
+  "license": "MIT",
   "author": {
     "email": "cwysong@indigital.net",
     "name": "Corey Wysong"
@@ -7,40 +16,11 @@
     "type": "git",
     "url": "https://github.com/cwysong85/sipjs-udp"
   },
-  "dependencies": {
-    "promiscuous": "^0.6.0"
-  },
-  "description": "A simple, intuitive, and powerful JavaScript signaling library",
-  "devDependencies": {
-    "browserify": "^4.1.8",
-    "grunt": "~0.4.0",
-    "grunt-browserify": "^2.1.0",
-    "grunt-cli": "~0.1.6",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jasmine": "~0.8.0",
-    "grunt-contrib-jshint": ">0.5.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-peg": "~1.3.1",
-    "grunt-trimtrailingspaces": "^0.4.0",
-    "pegjs": "^0.8.0"
-  },
-  "directories": {},
-  "engines": {
-    "node": ">=0.8"
-  },
-  "keywords": [
-    "sip",
-    "udp",
-    "node",
-    "library"
-  ],
-  "license": "MIT",
   "main": "src/index.js",
-  "name": "sipjs-udp",
-  "scripts": {
-    "prepublishOnly": "cd src/Grammar && mkdir -p dist && pegjs --extra-options-file peg.json src/Grammar.pegjs dist/Grammar.js",
-    "test": "grunt travis --verbose"
+  "engines": {
+    "node": ">=18 <19"
   },
-  "title": "sipjs-udp",
-  "version": "0.0.17"
+  "dependencies": {
+    "promiscuous": "0.7.2"
+  }
 }
